# ai_memory_protocol

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  memory.sh  pyproject.toml
.github/workflows/: ci.yml
src/ai_memory_protocol/: __init__.py  capture.py  cli.py  config.py  engine.py  executor.py  formatter.py  mcp_server.py  planner.py  rst.py  scaffold.py
tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_engine.py  test_executor.py  test_formatter.py  test_mcp_server.py  test_planner.py  test_rst.py  test_scaffold.py
