[project]
name = "ai-memory-protocol"
version = "0.2.0"
description = "AI Memory Protocol — versioned, graph-based memory for AI agents using Sphinx-Needs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "bburda" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "sphinx>=7.0,<9",
    "sphinx-needs>=4.0",
    "sphinxcontrib-plantuml>=0.30",
    "sphinx-rtd-theme>=2.0",
    "sphinx-design>=0.6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.6.0"]

[project.urls]
Homepage = "https://github.com/bburda/ai_memory_protocol"
Repository = "https://github.com/bburda/ai_memory_protocol"
Issues = "https://github.com/bburda/ai_memory_protocol/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
memory = "ai_memory_protocol.cli:main"
memory-mcp-stdio = "ai_memory_protocol.mcp_server:main_stdio"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_memory_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Sphinx build (deselect with '-m \"not integration\"')",
]
addopts = "-ra --strict-markers"
